[gd_scene load_steps=4 format=3 uid="uid://cgcnorcuqanav"]

[ext_resource type="Script" uid="uid://ctlarpn1nlv27" path="res://scripts/level.gd" id="1_2q6dc"]
[ext_resource type="Script" uid="uid://cx52p1ubwxotm" path="res://scripts/game/endpoint_manager.gd" id="2_w8frs"]
[ext_resource type="Script" uid="uid://c8p71chgoo3r0" path="res://scripts/game/truffie_spawner.gd" id="3_mx8sn"]

[node name="Level" type="Node2D"]
script = ExtResource("1_2q6dc")

[node name="GutMeter" type="ProgressBar" parent="."]
offset_left = 16.0
offset_top = 464.0
offset_right = 48.0
offset_bottom = 632.0
max_value = 10.0
value = 5.0
fill_mode = 3
show_percentage = false

[node name="TimeLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 81.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 30
text = "Time left:"

[node name="EndpointManager" type="Node2D" parent="."]
script = ExtResource("2_w8frs")

[node name="Truffies" type="Node2D" parent="."]
script = ExtResource("3_mx8sn")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
